# World-Builder

./: .gitignore  AGENT_PROMPTS.md  API_SPEC.md  APP_STORE_PAGE.md  DATA_MODELS.md  ENGINEERING_PLAN.md  PLANET_ARCHITECT_CODEX.md  PRODUCT_BRIEF.md  README.md  ROADMAP_SPRINTS.md  SECURITY_AND_ENTITLEMENTS.md  SIMULATION_SPEC.md  UX_FLOW.md
docs/: BUG_LOG.md  CHANGELOG.md
docs/plans/: 2026-02-24-sprint-0-1-foundations-and-sim-core.md  2026-02-24-sprint-2-ios-bridge-and-visualization.md  2026-02-24-sprint-4-food-web-level-2-codex-design.md  2026-02-24-sprint-4-food-web-level-2-codex.md
ios/: project.yml
ios/PlanetArchitect/: Info.plist  PlanetArchitectApp.swift
ios/PlanetArchitect/Core/: CodexStore.swift  LevelLoader.swift
ios/PlanetArchitect/Core/SimulationBridge/: PlanetArchitect-Bridging-Header.h  SimTypes.swift  SimulationEngine.swift
ios/PlanetArchitect/Features/Campaign/: LevelSelectView.swift
ios/PlanetArchitect/Features/Codex/: CodexEntryView.swift  CodexView.swift  NewDiscoveriesSheet.swift
sim-core/: Cargo.toml  build-ios.sh
sim-core/benches/: sim_benchmark.rs
sim-core/include/: planet_architect.h
sim-core/levels/: level_02_shallow_seas.json
sim-core/src/: biosphere.rs  climate.rs  codex.rs  codex_entries.rs  ffi.rs  level.rs  lib.rs  main.rs  sim.rs  snapshot.rs  types.rs
sim-core/tests/: biosphere_test.rs  climate_test.rs  codex_test.rs  determinism_test.rs  ffi_test.rs  integration_test.rs  intervention_test.rs  level1_headless_test.rs  level_test.rs  saveload_test.rs  speciation_test.rs  types_test.rs
(+8 files in other folders)
