[package]
name = "planet-architect-sim"
version = "0.1.0"
edition = "2021"
description = "Deterministic simulation engine for Planet Architect"

[dependencies]
rand = "0.8"
rand_chacha = { version = "0.3", features = ["serde1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sim_benchmark"
harness = false

[lib]
crate-type = ["lib", "staticlib"]
